--- a/body/Reserva.css
+++ b/body/Reserva.css
@@ -18,7 +18,6 @@ img{
 
 /* Estilos de la barra de navegacion*/
 header {
-  
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,6 +25,7 @@ header {
   background-color: #fff;
   padding: 10px 350px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 200px;
 }
 
 
